k8s/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: veidemann-controller
spec:
  template:
    spec:

      hostAliases:
        - ip: 128.39.224.34
          hostnames:
            - stage.nettarkivet.nb.no

      containers:
        - name: veidemann-controller
          ports:
            # Remote debugging port
            - containerPort: 5005
              name: jdwp
            # JMX remote
            - containerPort: 9010
              name: jmx
          resources:
            requests:
              memory: 2Gi
              # jvm interprets this as having 2 cores
              # affects grpc-java netty thread pool size
              # see https://github.com/grpc/grpc-java/issues/3057#issuecomment-306238500
              cpu: 2000m
            limits:
              # JVM max heap size is by default 1/4 of memory limit
              # JVM min heap size is by default 1/64 of memory limit
              # see https://oracle.github.io/weblogic-kubernetes-operator/faq/resource-settings/
              # for a nice description
              memory: 4Gi
          volumeMounts:
            - mountPath: /app/profiler/out
              name: veidemann-backup
              subPath: profiler
        - name: profiler-nginx
          ports:
            - containerPort: 80
              name: http
          image: nginx:stable-alpine
          volumeMounts:
            - mountPath: /etc/nginx/conf.d
              name: nginx-config
              readOnly: true
            - mountPath: /usr/share/nginx/html/profiler
              name: veidemann-backup
              subPath: profiler
              readOnly: true
      volumes:
        - name: nginx-config
          configMap:
            name: skaffold-nginx-config
        - name: veidemann-backup
          persistentVolumeClaim:
            claimName: veidemann-backup
        - name: veidemann-config
          configMap:
            name: skaffold-veidemann-controller
            items:
              - key: log4j2.xml
                path: log4j2.xml
