k8s/service-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: veidemann-controller
spec:
  ports:
    - port: 9010
      name: jmx
      targetPort: jmx
    - port: 5005
      name: jdwp
      targetPort: jdwp
    - port: 8080
      name: http
      targetPort: http
